apps/eos/overlays/dev/ingressroute-eos.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: eos-ingress
  namespace: eos
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`eos.alvaroico-teste.com.br`)
      kind: Rule
      services:
        - name: eos-api
          port: 3000
